syntax = "proto3";
package com.wavesplatform.api.grpc;

import "block.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service BlocksApi {
    rpc GetBlock (BlockRequest) returns (BlockAndHeight);
    rpc GetBlocksRange (BlocksRangeRequest) returns (stream BlockAndHeight);
    rpc CalcBlocksDelay (BlocksDelayRequest) returns (google.protobuf.UInt64Value);
    rpc GetCurrentHeight (google.protobuf.Empty) returns (google.protobuf.UInt32Value);
    rpc GetBlockAtHeight (google.protobuf.UInt32Value) returns (Block);
    rpc GetBlockHeaderAtHeight (google.protobuf.UInt32Value) returns (Block.SignedHeader);
    rpc GetBlockHeadersRange (BlocksRangeRequest) returns (stream Block.SignedHeader);
    rpc GetLastBlock (google.protobuf.Empty) returns (Block);
    rpc GetLastBlockHeader (google.protobuf.Empty) returns (Block.SignedHeader);
    rpc GetFirstBlock (google.protobuf.Empty) returns (Block);
}

message BlockRequest {
    oneof request {
        bytes block_id = 1;
        int32 height = 2;
        bytes parent_id = 3;
    }
}

message BlocksRangeRequest {
    uint32 from_height = 1;
    uint32 to_height = 2;
    oneof filter {
        bytes generator = 3;
    }
}

message BlocksDelayRequest {
    bytes block_id = 1;
    uint32 block_num = 2;
}

message BlockAndHeight {
    Block block = 1;
    uint32 height = 2;
}
